# tiny-coordinator

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.cpp  Dockerfile.java  Makefile  PLAN.md  README.md  docker-compose.yml  pom.xml
coordinator/: pom.xml
coordinator/src/main/java/engine/client/: EngineClient.java  RaftLib.java  RaftLogClient.java
coordinator/src/main/java/engine/coordinator/: CoordinatorGrpcService.java  KvStore.java  LeaseManager.java  StateMachineDriver.java  WatchManager.java
coordinator/src/main/java/engine/health/: CoordinatorHealthCheck.java
coordinator/src/main/java/engine/mvcc/: CompactManager.java  MvccStore.java  Revision.java  TxnManager.java  VersionedKeyValue.java
coordinator/src/main/proto/: coordinator.proto  engine  jni.proto  log.proto  raft.proto
coordinator/src/main/resources/: application.properties
coordinator/src/test/java/engine/coordinator/: CoordinatorTest.java
coordinator/src/test/java/engine/mvcc/: CompactManagerTest.java  MvccStoreTest.java  TxnManagerTest.java  VersionedKeyValueTest.java
core/: .clangd  CMakeLists.txt  CMakePresets.json  Cargo.toml  conanfile.txt
core/engine/: Cargo.toml
core/engine/src/: config.rs  lib.rs  log.rs  node.rs  peer.rs  raftcore.rs  status.rs  storage.rs  wal.rs
core/engine/tests/: integration_test.rs
core/jni/: Cargo.toml
core/jni/src/: lib.rs
core/proto/: Cargo.toml  build.rs
core/proto/src/: lib.rs
core/src/: main.cpp
core/src/common/: encoding.h  status.h  types.h
core/src/raft/: config.h  log.h  node.cpp  node.h  raft.cpp  raft.h  storage.cpp  storage.h
core/src/server/: server.cpp  server.h
core/tests/: raft_test.cpp
docs/: mvcc-revision-design-detailed.md  mvcc-revision-design.md  review-2026-05-29.md  review-fix-2026-05-30.md
docs/superpowers/plans/: 2026-07-23-coordinator-capability-completion.md
docs/superpowers/specs/: 2026-07-21-cpp-to-rust-design.md  2026-07-23-coordinator-capability-completion-design.md  2026-07-23-event-driven-kv-aware-router-design.md  2026-07-23-java-raft-learning-architecture-design.md  2026-07-23-rust-only-arch-design.md
proto/: coordinator.proto  jni.proto  log.proto  pom.xml  raft.proto
proto/src/main/proto/: coordinator.proto  raft.proto
raft/: pom.xml
raft/src/main/java/dev/talent/raft/: ClusterConfiguration.java  RaftCore.java  RaftEffect.java  RaftEvent.java  RaftLogEntry.java  RaftSnapshot.java
raft/src/test/java/dev/talent/raft/: RaftCoreTest.java
runtime/: pom.xml
runtime/src/main/java/dev/talent/runtime/: FileRaftStorage.java  GrpcRaftTransport.java  RaftException.java  RaftProtocolMapper.java  RaftRuntime.java  RaftStorage.java  RaftTransport.java  ReplicatedStateMachine.java
runtime/src/test/java/dev/talent/runtime/: FileRaftStorageTest.java
server/: pom.xml
server/src/main/java/dev/talent/server/: CoordinatorGrpcApi.java  CoordinatorNode.java  LivenessCheck.java  PeerGrpcService.java  ReadinessCheck.java
server/src/main/resources/: application.properties
testkit/: pom.xml
(+15 files in other folders)
